# src/src/models/ApiApiPublicConsentGetOneResponse.ts
@@ -1,0 +1,86 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Public API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import type { ApiApiPublicConsentGetOneResponseClientDto } from './ApiApiPublicConsentGetOneResponseClientDto';
+import {
+    ApiApiPublicConsentGetOneResponseClientDtoFromJSON,
+    ApiApiPublicConsentGetOneResponseClientDtoFromJSONTyped,
+    ApiApiPublicConsentGetOneResponseClientDtoToJSON,
+} from './ApiApiPublicConsentGetOneResponseClientDto';
+import type { ApiApiPublicConsentGetOneResponseScopeDto } from './ApiApiPublicConsentGetOneResponseScopeDto';
+import {
+    ApiApiPublicConsentGetOneResponseScopeDtoFromJSON,
+    ApiApiPublicConsentGetOneResponseScopeDtoFromJSONTyped,
+    ApiApiPublicConsentGetOneResponseScopeDtoToJSON,
+} from './ApiApiPublicConsentGetOneResponseScopeDto';
+
+/**
+ * 
+ * @export
+ * @interface ApiApiPublicConsentGetOneResponse
+ */
+export interface ApiApiPublicConsentGetOneResponse {
+    /**
+     * 
+     * @type {ApiApiPublicConsentGetOneResponseClientDto}
+     * @memberof ApiApiPublicConsentGetOneResponse
+     */
+    client?: ApiApiPublicConsentGetOneResponseClientDto;
+    /**
+     * 
+     * @type {Array<ApiApiPublicConsentGetOneResponseScopeDto>}
+     * @memberof ApiApiPublicConsentGetOneResponse
+     */
+    scopes?: Array<ApiApiPublicConsentGetOneResponseScopeDto> | null;
+}
+
+/**
+ * Check if a given object implements the ApiApiPublicConsentGetOneResponse interface.
+ */
+export function instanceOfApiApiPublicConsentGetOneResponse(value: object): boolean {
+    let isInstance = true;
+
+    return isInstance;
+}
+
+export function ApiApiPublicConsentGetOneResponseFromJSON(json: any): ApiApiPublicConsentGetOneResponse {
+    return ApiApiPublicConsentGetOneResponseFromJSONTyped(json, false);
+}
+
+export function ApiApiPublicConsentGetOneResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): ApiApiPublicConsentGetOneResponse {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'client': !exists(json, 'client') ? undefined : ApiApiPublicConsentGetOneResponseClientDtoFromJSON(json['client']),
+        'scopes': !exists(json, 'scopes') ? undefined : (json['scopes'] === null ? null : (json['scopes'] as Array<any>).map(ApiApiPublicConsentGetOneResponseScopeDtoFromJSON)),
+    };
+}
+
+export function ApiApiPublicConsentGetOneResponseToJSON(value?: ApiApiPublicConsentGetOneResponse | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'client': ApiApiPublicConsentGetOneResponseClientDtoToJSON(value.client),
+        'scopes': value.scopes === undefined ? undefined : (value.scopes === null ? null : (value.scopes as Array<any>).map(ApiApiPublicConsentGetOneResponseScopeDtoToJSON)),
+    };
+}
+
